--- a/src/app/countries/components/country-table/country-table.component.html
+++ b/src/app/countries/components/country-table/country-table.component.html
@@ -21,7 +21,7 @@
                 <td><img [src]="country.flags.svg" [alt]="country.name.common"></td>
                 <td>{{country.capital}}</td>
                 <td>{{country.name.common}}</td>
-                <td><a>Ver más...</a></td>
+                <td><a [routerLink]="['/countries/by/', country.cca3]">+ info</a></td>
             </tr>
         </tbody>
     </table>
