optimización d código + loading spinner

--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -3,5 +3,5 @@
     [placeholder]="placeholder"
     class="form-control"
     #txtSearchInput
-    (keyup.enter)="emitValue(txtSearchInput.value)"
+    (keyup)="onKeyPress(txtSearchInput.value)"
 >
