--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -16,6 +16,7 @@
     <div class="col">
         <hr>
         <!--tabla-->
+        <shared-loading-spinner *ngIf="isLoading" [term]="'Capital'"></shared-loading-spinner>
        <countries-table [countries]="countries"></countries-table>
     </div>
 </div>
