--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -14,6 +14,8 @@
 <div class="row">
     <div class="col">
         <hr>
+        <shared-loading-spinner *ngIf="isLoading" [term]="'País'"></shared-loading-spinner>
+
        <countries-table [countries]="countries"></countries-table>
     </div>
 </div>
