--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -5,8 +5,8 @@
 <div class="row">
     <div class="col">
         <!--Searchbox-->
-        <shared-search-box 
-            (onValue)="searchByCapital($event)"
+        <shared-search-box
+            (onDebounce)="searchByCapital($event)"
             placeholder="Buscar por capital"
         ></shared-search-box>
     </div>
