añadida memoria en local storage y optimización de código - fin sección 10

--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,6 +1,7 @@
 <input
     type="text"
     [placeholder]="placeholder"
+    [value]="initialValue"
     class="form-control"
     #txtSearchInput
     (keyup)="onKeyPress(txtSearchInput.value)"
