--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -7,6 +7,7 @@
         <shared-search-box 
             (onDebounce)="searchByCountry($event)"
             placeholder="Buscar por país"
+            [initialValue]="initialValue"
         ></shared-search-box>
     </div>
 </div>
