--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="row mt-4">
-  <div class="col-3">
+  <div class="col-12 col-lg-3 mb-2">
     <!--Sidebar-->
     <shared-sidebar></shared-sidebar>
   </div>
 
-  <div class="col">
+  <div class="col mt-2">
     <!--Páginas-->
     <router-outlet></router-outlet>
   </div>
