--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -11,33 +11,47 @@
     </div>
 
     <div class="row">
-        <div class="col-6">
+        <div class="col col-lg-6">
             <h3>Bandera</h3>
-            <img [src]="country.flags.svg" [alt]="country.name.common" class="img-thumbnail">
+            <img [src]="country.flags.svg" [alt]="country.flags.alt" class="img-thumbnail">
+            <div class="col mt-3">
+                <h3>Traducciones</h3>
+    
+                <div class="d-flex flex-wrap">
+                    <span class="badge bg-primary m-1">{{country.translations['es']?.official}}</span>
+                    <span class="badge bg-primary m-1">{{country.translations['rus']?.official}}</span>
+                    <span class="badge bg-primary m-1">{{country.translations['por']?.official}}</span>
+                    <span class="badge bg-primary m-1">{{country.translations['fin']?.official}}</span>
+                    <span class="badge bg-primary m-1">{{country.translations['fr']?.official}}</span>
+                    <span class="badge bg-primary m-1">{{country.translations['ja']?.official}}</span>
+                    <span class="badge bg-primary m-1">{{country.translations['br']?.official}}</span>
+                    <span class="badge bg-primary m-1">{{country.translations['ara']?.official}}</span>
+                </div>
+            </div>
         </div>
-        <div class="col-6">
+        <div class="col col-lg-6 mt-3">
             <h3>Información</h3>
             <ul class="list-group">
                 <li class="list-group-item">
-                    <strong>Capital:</strong> {{country.capital}}
+                    <strong>📌 Capital:</strong> {{country.capital}}
                 </li>
 
                 <li class="list-group-item">
-                    <strong>Población:</strong> {{country.population | number}}
+                    <strong>👥 Población:</strong> {{country.population | number}}
                 </li>
-
-                <li class="list-group-item">
-                    <strong>Moneda:</strong>
+<!-- 
+                <li class="list-group-item" *ngFor="let currency of country.currencies">
+                    <strong>🪙 Moneda:</strong>
                     {{country.currencies.CRC?.name}}
-                    <span class="badge bg-info">{{country.currencies.CRC?.symbol}}</span>
+                    <span class="badge bg-info">{{country.currencies.CRC?.symbol || country.currencies.EUR?.symbol}}</span>
+                </li> -->
+
+                <li class="list-group-item">
+                    <strong>📇 Código:</strong> {{country.cca3}}
                 </li>
 
                 <li class="list-group-item">
-                    <strong>Código:</strong> {{country.cca3}}
-                </li>
-
-                <li class="list-group-item">
-                    <strong>Región:</strong> {{country.region}}
+                    <strong>🗺️ Región:</strong> {{country.region}}
                 </li>
 
                 <li class="list-group-item">
@@ -46,28 +60,20 @@
                 </li>
 
                 <li class="list-group-item">
-                    <strong>Comienza la semana el:</strong> {{country.startOfWeek}}
+                    <strong>📆 Comienza la semana el:</strong> {{country.startOfWeek}}
                 </li>
+<!-- 
+                <li class="list-group-item" *ngIf="country.languages">
+                    <strong>🗣️ Idiomas:</strong>
+                </li> -->
             </ul>
         </div>
     </div>
-
-    <div class="row mt-2">
-        <div class="col">
-            <h3>Traducciones</h3>
-
-            <div class="d-flex flex-wrap">
-                <span class="badge bg-primary m-1">{{country.translations['es']?.official}}</span>
-                <span class="badge bg-primary m-1">{{country.translations['rus']?.official}}</span>
-                <span class="badge bg-primary m-1">{{country.translations['por']?.official}}</span>
-                <span class="badge bg-primary m-1">{{country.translations['fin']?.official}}</span>
-                <span class="badge bg-primary m-1">{{country.translations['fr']?.official}}</span>
-                <span class="badge bg-primary m-1">{{country.translations['ja']?.official}}</span>
-                <span class="badge bg-primary m-1">{{country.translations['br']?.official}}</span>
-                <span class="badge bg-primary m-1">{{country.translations['ara']?.official}}</span>
-            </div>
-
-
-        </div>
+    
+    <div class="row mt-3 map-container pb-5">
+        <div id="map"></div>
+        <a class="btn btn-outline-primary btn-sm" [href]="country.maps.openStreetMaps" target="_blank">
+            <small>Ver mapa en OpenStreetMap</small>
+        </a>
     </div>
 </div>
