--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -16,8 +16,8 @@
 <div class="row">
     <div class="col">
         <hr>
-        <!--tabla-->
         <shared-loading-spinner *ngIf="isLoading" [term]="'Capital'"></shared-loading-spinner>
-       <countries-table [countries]="countries"></countries-table>
+        <country-card [countries]="countries" class="d-block d-md-none"></country-card>
+        <countries-table [countries]="countries" class="d-none d-md-block"></countries-table>
     </div>
 </div>
