--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -72,7 +72,7 @@
     
     <div class="row mt-3 map-container pb-5">
         <div id="map"></div>
-        <a class="btn btn-outline-primary btn-sm" [href]="country.maps.openStreetMaps" target="_blank">
+        <a class="btn btn-outline-primary btn-sm m-2" [href]="country.maps.openStreetMaps" target="_blank">
             <small>Ver mapa en OpenStreetMap</small>
         </a>
     </div>
