new style + structure navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="row mt-4">
   <div class="col-12 col-lg-3 mb-2">
     <!--Sidebar-->
-    <shared-sidebar></shared-sidebar>
+    <shared-navbar></shared-navbar>
   </div>
 
   <div class="col mt-2">
