mobile + general style fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,7 @@
 <div class="row mt-4">
-  <div class="col-12 col-lg-3 mb-2">
     <!--Sidebar-->
-    <shared-navbar></shared-navbar>
-  </div>
+    <shared-navbar class="mb-2"></shared-navbar>
 
-  <div class="col mt-2">
     <!--Páginas-->
     <router-outlet></router-outlet>
-  </div>
 </div>
