--- a/src/app/countries/components/country-card/country-card.component.html
+++ b/src/app/countries/components/country-card/country-card.component.html
@@ -1,11 +1,11 @@
-<div *ngIf="countries.length === 0; else table" class="alert alert-warning text-center">
+<div *ngIf="countries.length === 0; else table" class="alert alert-info text-center">
     No hay países que mostrar.
 </div>
 
 <ng-template #table>
-    <div class="container mt-3">
+    <div class="container">
         <div class="row">
-            <div *ngFor="let country of countries; let i = index" class="col-12 mb-3">
+            <div *ngFor="let country of countries; let i = index" class="col-12 mb-3 col-cards">
                 <div class="card">
                     <div class="card-body d-flex align-items-center">
                         <img 
@@ -16,13 +16,17 @@
                         />
                         <div class="flex-grow-1">
                             <h5 class="card-title mb-1">{{ country.name.common }}</h5>
-                            <p class="mb-1"><strong>Capital:</strong> {{ country.capital }}</p>
-                            <p class="mb-1"><strong>Población:</strong> {{ country.population | number }}</p>
+                            <p class="mb-1 card-info"><strong>Capital:</strong>
+                                {{ country.capital }}
+                            </p>
+                            <p class="mb-1 card-info"><strong>Población:</strong>
+                                {{ country.population | number }}
+                                </p>
                         </div>
                         <div>
                             <a 
                                 [routerLink]="['/countries/by/', country.cca3]" 
-                                class="btn btn-primary btn-sm"
+                                class="btn btn-outline-primary btn-sm"
                             >
                                 + Info
                             </a>
