--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -6,16 +6,16 @@
 
 <div *ngIf="country; else loading">
     <div class="row">
-        <h2>{{country.name.common}}</h2>
+        <h1 class="text-center">{{country.name.common}}</h1>
         <hr>
     </div>
 
     <div class="row">
         <div class="col col-lg-6">
-            <h3>Bandera</h3>
+            <h5>Bandera</h5>
             <img [src]="country.flags.svg" [alt]="country.flags.alt" class="img-thumbnail">
             <div class="col mt-3">
-                <h3>Traducciones</h3>
+                <h5>Traducciones</h5>
     
                 <div class="d-flex flex-wrap">
                     <span class="badge bg-primary m-1">{{country.translations['es']?.official}}</span>
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="col col-lg-6 mt-3">
-            <h3>Información</h3>
+            <h5>Información</h5>
             <ul class="list-group">
                 <li class="list-group-item">
                     <strong>📌 Capital:</strong> {{country.capital}}
