--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -12,10 +12,10 @@
 
     <div class="row">
         <div class="col col-lg-6">
-            <h5>Bandera</h5>
+            <h5>Bandera:</h5>
             <img [src]="country.flags.svg" [alt]="country.flags.alt" class="img-thumbnail">
             <div class="col mt-3">
-                <h5>Traducciones</h5>
+                <h5>Traducciones:</h5>
     
                 <div class="d-flex flex-wrap">
                     <span class="badge bg-primary m-1">{{country.translations['es']?.official}}</span>
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="col col-lg-6 mt-3">
-            <h5>Información</h5>
+            <h5>Información:</h5>
             <ul class="list-group">
                 <li class="list-group-item">
                     <strong>📌 Capital:</strong> {{country.capital}}
@@ -60,8 +60,10 @@
         </div>
     </div>
     
-    <div class="row mt-3 map-container pb-5 justify-content-center">
+    <div class="mt-3 d-flex flex-column flex-no-wrap justify-content-center pb-5 align-items-center">
         <div id="map"></div>
-        <button class="btn btn-outline-primary btn-sm m-2" style="max-width: 220px;" (click)="country.maps.openStreetMaps" target="_blank"> Ver mapa en OpenStreetMap</button>
+        <button class="btn btn-outline-primary btn-sm m-2" style="max-width: 220px;" (click)="country.maps.openStreetMaps" target="_blank">
+            Ver mapa en OpenStreetMap
+        </button>
     </div>
 </div>
